# hw-paradigmy

./: .gitignore  README.md  README.txt
1 MD5/src/: SHA256Sum.java
12 Clojure linal/: 1_1_intro.clj  1_3_lists.clj  1_4_vectors.clj
13 Clojure calculator/src/jstest/: AbstractTests.java
2 BinarySearch/src/search/: BSTest.java  BinarySearchMissing.java
3-4 ArrayQueue/src/base/: Randomized.java
3-4 ArrayQueue/src/queue/: ArrayQueueTest.java
5 Calculator/src/: expression.rar
5 Calculator/src/expression/: CommonExpression.java  DoubleExpressionTest.java  Main.java
6 Parser/src/expression/: Add.java  And.java  Const.java  Count.java  DoubleExpressionTest.java  Expression.java  ExpressionTest.java  Negate.java  Subtract.java  UnaryOperation.java  Variable.java  Xor.java
7 Exceptions/src/expression/: CheckedAdd.java  CheckedLg.java  CheckedPow.java  Const.java  Not.java  Or.java  UnaryOperation.java  Variable.java
8 Generic/src/expression/: BigIntegerOperation.java  BinaryOperation.java  DoubleOperation.java  LongOperations.java  Multiply.java  Operation.java  ShortOperation.java  Subtract.java  (+3 more)
9 js functional/src/: functionalExpression.js
cpp-course/BigInteger/: 07 0 53.txt  CMakeLists.txt  big_integer.cpp  big_integer.h  big_integer_testing.cpp  main.cpp  myCMakeLists.txt
cpp-course/BigInteger/gtest/: gtest-all.cc  gtest_main.cc
paradigmy - solutions/13 Clojure calculator/: expr.clj
paradigmy-solutions/12 Clojure linal/: 0_1_magic.clj  1_2_functions.clj  1_5_functions-2.clj  linear.clj
paradigmy-solutions/13 Clojure calculator/: expression.clj
(+119 files in other folders)
